<resources>
    <string name="app_name">Scarnes Dice</string>
    <string name="your_score">Your score:</string>
    <string name="sample_score_1">2</string>
    <string name="my_score">My score:</string>
    <string name="button_roll">Roll</string>
    <string name="button_hold">Hold</string>
    <string name="button_reset">Reset</string>
    <string name="sample_score_2">3</string>
    <string name="my_turn">My turn</string>
    <string name="your_turn">Your turn</string>
</resources>
