<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/user_score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/your_score"
        android:textColor="#2979FF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/user_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="monospace"
        android:text="@string/sample_score_1"
        android:textColor="#423F47"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/user_score_label"
        app:layout_constraintStart_toEndOf="@+id/user_score_label"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/computer_score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/my_score"
        android:textColor="#FF9100"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/computer_score"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/computer_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/sample_score_2"
        android:textColor="#423F47"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/user_score"
        app:layout_constraintTop_toBottomOf="@+id/user_score" />

    <ImageView
        android:id="@+id/diceView"
        android:layout_width="158dp"
        android:layout_height="218dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computer_score"
        app:srcCompat="@drawable/ic_dice_four"
        android:contentDescription="" />

    <Button
        android:id="@+id/btn_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="roll"
        android:text="@string/button_roll"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_hold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_hold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_hold"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_roll"
        app:layout_constraintEnd_toStartOf="@+id/btn_reset"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_roll" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reset"
        android:onClick="reset"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_hold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_hold" />

</androidx.constraintlayout.widget.ConstraintLayout>